# mola

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: check-utc-timezone.yml
.husky/: post-commit  pre-commit
display/: .direnv  .envrc  .gitignore  Cargo.toml  Makefile  README.md
display/assets/models/: model1.blend  model1.glb
display/assets/mouth/: 3.kra  O.kra  o.kra
display/assets/shaders/: convolution_filter.wgsl  edge_detection.wgsl  moebius_material.wgsl  moebius_outline.wgsl  post_processing.wgsl  pure_color.wgsl  simplex_noise.wgsl  sketch_jitter.wgsl  toon.wgsl
display/src/: camera_controller.rs  gizmos_plugin.rs  hand_data.rs  main.rs  model_plugin.rs  shader_plugin.rs
display/src/api/: api_server.rs  face_api.rs  hands_api.rs  mod.rs  pose_api.rs
display/src/character_control/: character_controller.rs  find_entity.rs  hands.rs  mod.rs  mouth.rs  mouth_control.rs  move_eyes.rs  pose.rs  rotate_body.rs  rotate_hands.rs
display/src/material/: jitter.rs  mod.rs  moebius_material.rs  post_processing_moebius.rs  pure_color_material.rs
display/src/math/: kalman_filter.rs  landmarks.rs  mod.rs
display/src/ui/: mod.rs  slider.rs  state.rs  theme.rs  toggle_switch.rs  ui_controller.rs
mocap/web/: README.md  index.html  package-lock.json  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.ts
mocap/web/src/: App.module.css  App.tsx  adw.css  env.ts  index.css  vite-env.d.ts
mocap/web/src/components/: icon.tsx  options-ui.tsx  pwa-badge.tsx  toaist.tsx  toast.css
